# omega-old

./: .gitmodules  CMakeLists.txt  Makefile  README.md  abyss.c  abyss.h  attack.h  aux1.c  aux1.h  aux2.c  aux3.c  aux3.h  bank.c  bank.h  bank_account.h  char.c  city.c  command1.c  command2.c  command3.c  command3.h  country.c  defs.h  effect1.c  effect2.c  effect2.h  effect3.c  env.c  etc.c  extern.h  file.c  functions.h  gen1.c  gen2.c  glob.h  guild1.c  guild2.c  guild2.h  house.c  inv.c  (+56 more)
cmake/: README.md
debian/: README.Debian  changelog  control  copyright  menu  omega-rpg.docs  omega-rpg.overrides  omega-rpg.postinst  omega-rpg.postrm  rules
lib/: Makefile  motd.txt
scripts/: log.lua  player.lua
src/: CMakeLists.txt  abyss.c  aux1.c  aux1.cpp  aux1.h  aux2.cpp  aux2.h  aux3.c  aux3.cpp  aux3.h  bank.c  bank.cpp  character.cpp  character.h  city.h  clrgen.cpp  colors.h  combat.h  command1.h  command2.cpp  command2.h  compress.cpp  country.cpp  country.h  date.c  defs.h  effect1.cpp  effect1.h  effect2.cpp  effect3.cpp  effect3.h  env.cpp  env.h  environment.h  etc.cpp  etc.h  file.cpp  file.h  functions.c  functions.h  (+79 more)
tools/: CMakeLists.txt
tools/libsrc/: Makefile
